# rustatouille

./: .env  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml
src/: admin.rs  db.rs  main.rs  public.rs  regenerate.rs  static.rs
src/controllers/: admin.rs  mod.rs  static.rs
src/db/: fixtures.rs
src/db/migrations/: m1.rs  mod.rs
src/db/models/: comments.rs  interventions.rs  mod.rs  services.rs
src/view/: admin.css  admin.html  index.html  intervention-fragment.html  new-comment.html  new-intervention.html  new-service.html  service-fragment.html  style.css
templates/: admin.css  admin.html  base.html  feed.atom.xml  index.html  new-intervention.html  new-service.html  style.css
tests/features/: admin-can-access-administration.feature  admin-changes-intervention-status.feature  admin-comments-on-intervention.feature  admin-plans-intervention.feature
