[package]
name = "rustatouille"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "sqlite", "mysql", "postgres", "mssql", "chrono"] }
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
